fixed header jump link fix

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -35,6 +35,10 @@
     font-weight: var(--ifm-font-weight-light);
 }
 
+.container [id] {
+    scroll-margin-top: var(--ifm-navbar-height);
+}
+
 .stackSplitImage {
     max-width: 30em;
     height: auto;
